--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,30 @@
   
 
 }
-body{
+/* body{
   background-image: url("https://images.livemint.com/rf/Image-621x414/LiveMint/Period2/2018/11/05/Photos/Processed/realestate-kCVB--621x414@LiveMint.jpg");
   background-image: url("https://images.livemint.com/rf/Image-621x414/LiveMint/Period2/2018/11/05/Photos/Processed/realestate-kCVB--621x414@LiveMint.jpg");
   background-repeat: no-repeat;
-  /* width: 100%;
-  height: 100%; */
-   
+ 
     display: flex;
      height: 100vh; 
+     width: 100%;
      
-    /* justify-content: center; */
+   
   
   
-  
+} */
+
+.login-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.login-img{
+  width: 85%;
+  margin: auto;
+  margin-left: 30px;
 }
 
 .register{
