--- a/src/Component/Card/PropertyCard.css
+++ b/src/Component/Card/PropertyCard.css
@@ -1,7 +1,10 @@
 .card-container{
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     padding: 60px;
+    background-image: url("https://wallpapers.com/images/hd/real-estate-digital-art-0kmi22tcj2x60lim.jpg");
+    background-size: cover;
 }
 
 .card{
